<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Berger Xpress Visualizer Pk</string>
    <string name="camera_file_provider">com.berger.bergerXpressVisualizerPk.provider</string>
    <string name="berger_theme_color_hex" tools:ignore="ReferenceType">@color/bergerThemeColor</string>
    <string name="menu_clear">Clear Paint</string>
    <string name="menu_open">Final Image</string>
    <string name="menu_open_original">Original Image</string>
    <string name="menu_select">Select target</string>
    <string name="menu_cut">Process Image</string>
    <string name="menu_photo">Take Photo</string>
    <string name="menu_gallery">Open Gallery</string>
    <string name="menu_color">Choose Color</string>
    <string name="menu_texture">Choose Texture</string>
    <string name="home_label_card_visualizer">Color\nVisualizer</string>
    <string name="home_label_card_colors">Symphony\nof Colors</string>
    <string name="home_label_card_products">Products</string>
    <string name="home_label_card_calculator">Paint\nCalculator</string>
    <string name="home_label_card_album">My\nIdeas</string>
    <string name="home_label_card_about_us">About\nUs</string>
    <string name="home_label_card_inspirational">Inspirational\nIdeas</string>
    <string name="home_label_card_contact_us">Contact Us</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="side_menu_visualizer">Color Visualizer</string>
    <string name="side_menu_colors">Symphony of Colors</string>
    <string name="side_menu_calculator">Paint Calculator</string>
    <string name="side_menu_products">Products</string>
    <string name="side_menu_inspirational">Inspirational Ideas</string>
    <string name="side_menu_album">My Ideas</string>
    <string name="side_menu_dealer">Dealer Locator</string>
    <string name="side_menu_about_us">About Us</string>
    <string name="side_menu_contact_us">Contact Us</string>
    <string name="visualizer_button_apply_mask">Apply Mask</string>
    <string name="visualizer_button_clear_mask">Clear Mask</string>
    <string name="title_primary_colors_screen">Symphony of Colors</string>
    <string name="colors_toast_no_color">No Color Found...</string>
    <string name="title_calculator_screen">Paint Calculator</string>
    <string name="calculator_label_dropdown_select_surface">Surface</string>
    <string name="calculator_hint_dropdown_select_surface">Select Surface</string>
    <string name="calculator_label_dropdown_select_paint">Product</string>
    <string name="calculator_hint_dropdown_select_paint">Select Product</string>
    <string name="calculator_hint_recommended_coats_no">No. of Coats</string>
    <string name="calculator_label_Dimensions">Dimensions</string>
    <string name="calculator_label_feet">Feet</string>
    <string name="calculator_label_meter">Meters</string>
    <string name="calculator_label_sq_feet">Sq Feet</string>
    <string name="calculator_label_sq_meter">Sq Meter</string>
    <string name="calculator_label_enter_length">Length</string>
    <string name="calculator_hint_enter_length">Enter Length</string>
    <string name="calculator_label_enter_width">Width</string>
    <string name="calculator_hint_enter_width">Enter Width</string>
    <string name="calculator_lable_enter_area">Area</string>
    <string name="calculator_hint_enter_area">Enter Area</string>
    <string name="calculator_label_result">Result</string>
    <string name="calculator_label_lts_required">Liter(s)</string>
    <string name="calculator_label_required_paint">Required Paint</string>
    <string name="calculator_label_result_is_estimate">The given result is an approximation of the paint estimation.</string>
    <string name="calculator_button_calculate">Calculate</string>
    <string name="calculator_button_clear">Clear</string>
    <string name="calculator_toast_fill_all">Please fill all fields</string>
    <string name="calculator_toast_no_surface_list">No Surface Found...</string>
    <string-array name="surface_list">
        
        <item>All</item>
        <item>Ceiling</item>
        <item>Exterior Walls</item>
        <item>Interior Walls</item>
        <item>Doors</item>
        <item>Windows</item>
    </string-array>
    <string name="title_products_screen">Products</string>
    <string name="products_toast_no_products">No Products Found...</string>
    <string name="title_product_detail_screen">Details</string>
    <string name="product_button_view_colors">View Colors</string>
    <string name="product_label_heading_description">Description</string>
    <string name="product_label_heading_uses">Uses</string>
    <string name="product_label_heading_sizes">Pack Size</string>
    <string name="product_label_heading_surfaces">Surfaces</string>
    <string name="product_label_heading_preparation">Surface Preparation</string>
    <string name="product_label_heading_application">Application</string>
    <string name="product_label_heading_drying_time">Drying Time</string>
    <string name="product_label_heading_coverage">Coverage</string>
    <string name="product_label_heading_safety_precautions">Safety Precautions</string>
    <string name="product_label_size_unit">Liter(s)</string>
    <string name="title_select_source_screen">Select Source</string>
    <string name="select_source_label_description">Please click on the options below to select the picture you want to paint</string>
    <string name="select_source_label_paint_image">Paint your room</string>
    <string name="select_source_button_gallery">Photo Gallery</string>
    <string name="select_source_button_camera">Camera</string>
    <string name="title_inspirational_ideas_screen">Inspirational Ideas</string>
    <string name="inspirational_ideas_toast_no_ideas">No Ideas Found...</string>
    <string name="title_my_ideas_screen">My Ideas</string>
    <string name="my_ideas_label_no_idea">No Idea Saved</string>
    <string name="my_ideas_label_create_new">Create New</string>
    <string name="my_ideas_button_create_new">Create New Idea</string>
    <string name="title_my_idea_details_screen">Idea Details</string>
    <string name="idea_details_label_shades_used">Colors Used:</string>
    <string name="idea_details_button_delete">Delete</string>
    <string name="idea_details_button_paint">Visualize</string>
    <string name="title_dealer_screen">Dealer Locator</string>
    <string name="title_about_us_screen">About Us</string>
    <string name="title_contact_us_screen">Contact Us</string>
    <string name="contact_us_toast_no_contacts">No Contacts Found...</string>
    <string name="contact_tile_label_name">Name:</string>
    <string name="contact_tile_label_address">Address:</string>
    <string name="contact_tile_label_phone">Phone:</string>
    <string name="contact_tile_label_fax">Fax:</string>
    <string name="contact_tile_label_telecard">Telecard:</string>
    <string name="paint_button_erase">Erase</string>
    <string name="paint_button_undo">Undo</string>
    <string name="paint_button_original_picture">Original Picture</string>
    <string name="paint_button_painted_picture">Painted Picture</string>
    <string name="paint_button_rotate">Rotate</string>
    <string name="paint_button_masking">Masking Tape</string>
    <string name="paint_button_save_image">Save Image</string>
    <string name="paint_label_select_color">Select Color</string>
    <string name="paint_button_apply_masking">Apply Masking</string>
    <string name="paint_button_clear_masking">Clear Masking</string>
    <string name="paint_toast_saved">Image saved in my ideas</string>
    <string name="paint_toast_save_failed">Image save failed</string>
    <string name="paint_toast_masking_start">Tap anywhere on the image to mark the start of masking tape</string>
    <string name="paint_toast_masking_end">Tap anywhere on the image to mark the end of masking tape</string>
    <string name="paint_toast_masking_cannot_add">Can not add more</string>
    <string name="delete_idea_label_text">Are you sure you want to delete this idea?</string>
    <string name="delete_idea_button_1">No</string>
    <string name="delete_idea_button_2">Yes</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="connection_problem">Connection problem try again</string>
    <string name="label_color_with_light_background">#000000</string>
    <string name="label_color_with_dark_background">#FFFFFF</string>
</resources>