<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_clear"
        android:title="@string/menu_clear"
        android:orderInCategory="1"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_open_img"
        android:title="@string/menu_open"
        android:orderInCategory="1"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_open_original_img"
        android:title="@string/menu_open_original"
        android:orderInCategory="1"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_process_image"
        android:title="@string/menu_cut"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:visible="false"/>
    <item
        android:id="@+id/action_take_photo"
        android:title="@string/menu_photo"
        android:orderInCategory="3"
        app:showAsAction="never"
        android:visible="false"/>
    <item
        android:id="@+id/action_get_gallery"
        android:title="@string/menu_gallery"
        android:orderInCategory="4"
        app:showAsAction="never"
        android:visible="false"/>
    <item
        android:id="@+id/action_get_color"
        android:title="@string/menu_color"
        android:orderInCategory="5"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_get_texture"
        android:title="@string/menu_texture"
        android:orderInCategory="6"
        app:showAsAction="never" />
</menu>