<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackgroundColor"
    tools:context=".activities.MyIdeasActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/album_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/create_idea"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/no_idea_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="visible">

        <TextView
            android:id="@+id/no_idea_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_ideas_label_no_idea"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:visibility="visible"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toTopOf="@id/create_new"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"/>

        <TextView
            android:id="@+id/create_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_ideas_label_create_new"
            android:textSize="20sp"
            android:textStyle="italic"
            android:textColor="@color/hyperlink_color"
            app:layout_constraintTop_toBottomOf="@id/no_idea_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/create_idea"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/my_ideas_button_create_new"
        android:textSize="18sp"
        android:background="@drawable/background_button_dark"
        android:layout_margin="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>