<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/contact_us_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardElevation="0dp"
        app:cardCornerRadius="@dimen/corner_radius_card"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contact_us_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/top_margin_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="10dp"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/bottom_margin_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="15dp"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/start_margin_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="10dp"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/end_margin_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="10dp"/>

            <View
                android:id="@+id/label_end_margin"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@id/address_label"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/top_margin_guideline"
                app:layout_constraintStart_toStartOf="@id/start_margin_guideline"
                android:text="@string/contact_tile_label_name"
                android:textSize="15sp"
                android:textStyle="bold"
                android:paddingEnd="5dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/name_label"
                app:layout_constraintTop_toTopOf="@id/name_label"
                app:layout_constraintEnd_toEndOf="@id/end_margin_guideline"
                android:textSize="20sp"
                android:textColor="@color/contact_us_name_color"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/address_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/name"
                app:layout_constraintStart_toStartOf="@id/start_margin_guideline"
                android:text="@string/contact_tile_label_address"
                android:textSize="15sp"
                android:textColor="@color/contact_us_heading_color"
                android:textStyle="bold"
                android:paddingEnd="5dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/label_end_margin"
                app:layout_constraintTop_toTopOf="@id/address_label"
                app:layout_constraintEnd_toEndOf="@id/end_margin_guideline"
                android:textSize="15sp"
                android:textColor="@color/hyperlink_color"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/phone_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/address"
                app:layout_constraintStart_toStartOf="@id/start_margin_guideline"
                android:text="@string/contact_tile_label_phone"
                android:textSize="15sp"
                android:textColor="@color/contact_us_heading_color"
                android:textStyle="bold"
                android:paddingEnd="5dp"
                android:layout_marginTop="5dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/label_end_margin"
                app:layout_constraintTop_toTopOf="@id/phone_label"
                app:layout_constraintEnd_toEndOf="@id/end_margin_guideline"/>

            <TextView
                android:id="@+id/fax_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/phone"
                app:layout_constraintStart_toStartOf="@id/start_margin_guideline"
                android:text="@string/contact_tile_label_fax"
                android:textSize="15sp"
                android:textColor="@color/contact_us_heading_color"
                android:textStyle="bold"
                android:paddingEnd="5dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/fax"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/label_end_margin"
                app:layout_constraintTop_toTopOf="@id/fax_label"
                app:layout_constraintEnd_toEndOf="@id/end_margin_guideline"
                android:textSize="15sp"
                android:textColor="@color/contact_us_text_color"/>

            <TextView
                android:id="@+id/telecard_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/fax"
                app:layout_constraintStart_toStartOf="@id/start_margin_guideline"
                android:text="@string/contact_tile_label_telecard"
                android:textSize="15sp"
                android:textColor="@color/contact_us_heading_color"
                android:textStyle="bold"
                android:paddingEnd="5dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/telecard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/label_end_margin"
                app:layout_constraintTop_toTopOf="@id/telecard_label"
                app:layout_constraintEnd_toEndOf="@id/end_margin_guideline"
                android:textSize="15sp"
                android:textColor="@color/contact_us_text_color"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>