<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_app"
    tools:context=".activities.MyIdeaDetailsActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_margin_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="10dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_margin_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="10dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middle_margin_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6"/>

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar"/>

    <ImageView
        android:id="@+id/idea_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/middle_margin_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/colors_used_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/middle_margin_guideline"
        app:layout_constraintStart_toStartOf="@id/start_margin_guideline"
        android:layout_marginTop="10dp"
        android:text="@string/idea_details_label_shades_used"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/shades_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/colors_used_label"
        app:layout_constraintBottom_toTopOf="@id/bottom_bar"
        app:layout_constraintStart_toStartOf="@id/start_margin_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_margin_guideline"
        android:layout_marginTop="10dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_bar"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/delete_button_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3"/>

        <Button
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/delete_button_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/idea_details_button_delete"
            android:textSize="18sp"
            android:background="@drawable/background_button_red"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"/>

        <Button
            android:id="@+id/visualize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/delete_button_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/idea_details_button_paint"
            android:textSize="18sp"
            android:background="@drawable/background_button_dark"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>